--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
 	"author": "Kodjo Souleymane",
 	"license": "ISC",
 	"dependencies": {
+		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.20.2",
 		"cors": "^2.8.5",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
+		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.0.3",
 		"nodemon": "^3.0.2",
+		"passport": "^0.7.0",
+		"passport-jwt": "^4.0.1",
 		"swagger-jsdoc": "^6.2.8",
 		"swagger-ui-express": "^5.0.0",
 		"yamljs": "^0.3.0"
